fix : add overflow-x: hidden to tag main

--- a/app/[locale]/styles/main.scss
+++ b/app/[locale]/styles/main.scss
@@ -151,6 +151,10 @@ footer {
   margin-top: auto;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
